I think this should fix it on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,7 +26,8 @@ body {
   background-color: var(--very-dark-blue);
   display: grid;
   place-items: center;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   position: relative;
 }
